--- a/package.json
+++ b/package.json
@@ -3,25 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
-    "@mui/material": "^5.14.5",
     "@splidejs/react-splide": "^0.7.12",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.4.0",
+    "axios": "^1.6.3",
     "bootstrap": "^5.3.1",
     "firebase": "^10.3.0",
     "framer-motion": "^10.16.1",
+    "js-cookie": "^3.0.5",
     "mdb-react-ui-kit": "^6.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-js-dropdavn": "^1.0.4",
-    "react-router-dom": "^6.15.0",
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "react-slide": "^0.3.0",
     "react-toastify": "^9.1.3",
